--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,31 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html::-webkit-scrollbar {
+    width: 8px;
+}
+
+html::-webkit-scrollbar-thumb {
+    background: #424242;
+    border-radius: 8px;
+}
+
+html::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px rgb(2 17 39);
+    border-radius: 10px;
+}
+
+.sidebarScroll::-webkit-scrollbar {
+    width: 8px;
+}
+
+.sidebarScroll::-webkit-scrollbar-thumb {
+    background: #424242;
+    border-radius: 8px;
+}
+
+.sidebarScroll::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px rgb(2 17 39);
+    border-radius: 10px;
+}
