--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,13 @@ html::-webkit-scrollbar-track {
     border-radius: 10px;
 }
 
+body {
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5;
+}
+
 .sidebarScroll::-webkit-scrollbar {
     width: 8px;
 }
