--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@ body {
     font-size: 16px;
     font-weight: 400;
     line-height: 1.5;
+    overflow-x: hidden;
 }
 
 .sidebarScroll::-webkit-scrollbar {
