--- a/src/index.css
+++ b/src/index.css
@@ -37,3 +37,17 @@ body {
     box-shadow: inset 0 0 5px rgb(2 17 39);
     border-radius: 10px;
 }
+
+.checkerlinks::-webkit-scrollbar {
+    width: 8px;
+}
+
+.checkerlinks::-webkit-scrollbar-thumb {
+    background: #424242;
+    border-radius: 8px;
+}
+
+.checkerlinks::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px rgb(2 17 39);
+    border-radius: 10px;
+}
