--- a/src/index.css
+++ b/src/index.css
@@ -51,3 +51,17 @@ body {
     box-shadow: inset 0 0 5px rgb(2 17 39);
     border-radius: 10px;
 }
+
+*::-webkit-scrollbar {
+    width: 8px;
+}
+
+*::-webkit-scrollbar-thumb {
+    background: #424242;
+    border-radius: 8px;
+}
+
+*::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px rgb(2 17 39);
+    border-radius: 10px;
+}
