--- a/src/index.css
+++ b/src/index.css
@@ -65,3 +65,16 @@ body {
     box-shadow: inset 0 0 5px rgb(2 17 39);
     border-radius: 10px;
 }
+
+.polygonIcon {
+    clip-path: polygon(
+        50% 0,
+        50% 0,
+        100% 30%,
+        100% 70%,
+        50% 100%,
+        50% 100%,
+        0% 70%,
+        0% 30%
+    );
+}
