--- a/src/index.css
+++ b/src/index.css
@@ -89,3 +89,29 @@ input[type='number']::-webkit-outer-spin-button {
         0% 30%
     );
 }
+
+.banner {
+    background: url('./assests/tally-pay/bg.png');
+    background-repeat: no-repeat;
+    background-position: top left;
+    background-size: cover;
+}
+.details {
+    background: url('./assests/tally-pay/details-bg.png');
+    background-repeat: no-repeat;
+    background-position: top left;
+    background-size: cover;
+}
+.stoke-text {
+    color: black;
+    -webkit-text-fill-color: black; /* Will override color (regardless of order) */
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: white;
+    position: relative;
+}
+.stoke-text::before {
+    content: url('./assests/tally-pay/Vector.png');
+    position: absolute;
+    left: 15%;
+    bottom: 10%;
+}
