--- a/src/index.css
+++ b/src/index.css
@@ -90,6 +90,10 @@ input[type='number']::-webkit-outer-spin-button {
     );
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Roboto:wght@300;400;500;700&display=swap');
+body {
+    font-family: 'Roboto', sans-serif;
+}
 .banner {
     background: url('./assets/tally-pay/bg.png');
     background-repeat: no-repeat;
