--- a/src/index.css
+++ b/src/index.css
@@ -3,89 +3,118 @@
 @tailwind utilities;
 
 html::-webkit-scrollbar {
-    width: 8px;
+  width: 8px;
 }
 
 html::-webkit-scrollbar-thumb {
-    background: #424242;
-    border-radius: 8px;
+  background: #424242;
+  border-radius: 8px;
 }
 
 html::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px rgb(2 17 39);
-    border-radius: 10px;
+  box-shadow: inset 0 0 5px rgb(2 17 39);
+  border-radius: 10px;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 1.5;
-    overflow-x: hidden;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  overflow-x: hidden;
 }
 
 .sidebarScroll::-webkit-scrollbar {
-    width: 8px;
+  width: 8px;
 }
 
 .sidebarScroll::-webkit-scrollbar-thumb {
-    background: #424242;
-    border-radius: 8px;
+  background: #424242;
+  border-radius: 8px;
 }
 
 .sidebarScroll::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px rgb(2 17 39);
-    border-radius: 10px;
+  box-shadow: inset 0 0 5px rgb(2 17 39);
+  border-radius: 10px;
 }
 
 .checkerlinks::-webkit-scrollbar {
-    width: 8px;
+  width: 8px;
 }
 
 .checkerlinks::-webkit-scrollbar-thumb {
-    background: #424242;
-    border-radius: 8px;
+  background: #424242;
+  border-radius: 8px;
 }
 
 .checkerlinks::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px rgb(2 17 39);
-    border-radius: 10px;
+  box-shadow: inset 0 0 5px rgb(2 17 39);
+  border-radius: 10px;
 }
 
 *::-webkit-scrollbar {
-    width: 8px;
+  width: 8px;
 }
 
 *::-webkit-scrollbar-thumb {
-    background: #424242;
-    border-radius: 8px;
+  background: #424242;
+  border-radius: 8px;
 }
 
 *::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px rgb(2 17 39);
-    border-radius: 10px;
+  box-shadow: inset 0 0 5px rgb(2 17 39);
+  border-radius: 10px;
 }
 
-input[type='number']::-webkit-inner-spin-button,
-input[type='number']::-webkit-outer-spin-button {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
 
 .react-time-picker__wrapper {
-    border: none !important;
+  border: none !important;
 }
 
 .polygonIcon {
-    clip-path: polygon(
-        50% 0,
-        50% 0,
-        100% 30%,
-        100% 70%,
-        50% 100%,
-        50% 100%,
-        0% 70%,
-        0% 30%
-    );
+  clip-path: polygon(
+    50% 0,
+    50% 0,
+    100% 30%,
+    100% 70%,
+    50% 100%,
+    50% 100%,
+    0% 70%,
+    0% 30%
+  );
+}
+
+body {
+  font-family: "Roboto", sans-serif;
+}
+.banner {
+  background: url("./assets/tally-pay/bg.png");
+  background-repeat: no-repeat;
+  background-position: top left;
+  background-size: cover;
+}
+.details {
+  background: url("./assets/tally-pay/details-bg.png");
+  background-repeat: no-repeat;
+  background-position: top left;
+  background-size: cover;
+}
+.stoke-text {
+  color: black;
+  -webkit-text-fill-color: black; /* Will override color (regardless of order) */
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: white;
+  position: relative;
+}
+.stoke-text::before {
+  content: url("./assets/tally-pay/Vector.png");
+  position: absolute;
+  left: 15%;
+  bottom: 10%;
 }
